[gd_scene load_steps=9 format=3 uid="uid://c5myd2qgcuxrd"]

[ext_resource type="Script" uid="uid://bjj1tfyos5s6e" path="res://PLAYER/Tools/resonograph/resonograph.gd" id="1_emu61"]
[ext_resource type="AudioStream" uid="uid://cu5hk26pc7fh" path="res://AUDIO/SFX/dark-impact-sound.mp3" id="2_s32u8"]
[ext_resource type="AudioStream" uid="uid://ddqnsyldnmras" path="res://AUDIO/SFX/sonar-ping.mp3" id="3_k264i"]
[ext_resource type="AudioStream" uid="uid://m6scxnugl36w" path="res://AUDIO/SFX/lahmidi_wafae_2020_radioactive-96646.mp3" id="4_326b2"]
[ext_resource type="AudioStream" uid="uid://ddfdvy2fafyw5" path="res://AUDIO/SFX/error-sound-39539.mp3" id="5_cd7ya"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_emu61"]
transparency = 1
cull_mode = 2
albedo_color = Color(0.15170373, 0.60038817, 0.40018785, 0.851)
emission_enabled = true
emission = Color(0.13319641, 0.13319641, 0.13319638, 1)

[sub_resource type="SphereMesh" id="SphereMesh_emu61"]
material = SubResource("StandardMaterial3D_emu61")
radius = 1.0
height = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_emu61"]
radius = 1.33666

[node name="resonograph" type="Node3D"]
script = ExtResource("1_emu61")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_emu61")

[node name="Area3D" type="Area3D" parent="."]

[node name="resonograph_range" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_emu61")
debug_color = Color(0.8352941, 0, 0.39215687, 0.85490197)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0
one_shot = true

[node name="DarkImpactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_s32u8")

[node name="SonarPing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_k264i")

[node name="LahmidiWafae2020Radioactive96646" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_326b2")
volume_db = 14.759
parameters/looping = true

[node name="ErrorSound39539" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cd7ya")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
